# signlang

./: .env.example  .gitignore  Procfile  README.md  README_HUGGINGFACE.md  build.sh  create_db.py  fire_admin.py  list_model_files.py  main.py  project_overview.txt  pyproject.toml  render.yaml  render_simple.yaml  replit.nix  requirement.txt  requirements.txt  run.py  run_debug.py  run_dev.py  setup_env.sh  signai-web-app-firebase-adminsdk-fbsvc-ba097b499b.json  simple_app.py  test_keras_model.py  test_model_loading.py  test_mongodb.py  vercel.json
app/: __init__.py  config.py
app/api/: routes.py
app/auth/: routes.py  utils.py
app/database/: db.py  db_sql.py  models.py  mongodb.py  sql_models.py
app/inference/: huggingface_loader.py  model_loader.py  predict.py  utils.py
app/middleware/: jwt_required.py
app/routes/: admin_routes.py  prediction_routes.py  user_routes.py
app/static/css/: prism.css  style.css
app/static/js/: main.js  prism.js
app/templates/: api_checker.html  dashboard.html  index.html  login.html  register.html
