[tool.poetry]
name = "signai-backend"
version = "0.1.0"
description = "Backend API for Sign Language Recognition"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
email-validator = ">=2.2.0"
flask-cors = ">=5.0.1"
flask = ">=3.1.0"
flask-sqlalchemy = ">=3.1.1"
gunicorn = ">=23.0.0"
psycopg2-binary = ">=2.9.10"
pyjwt = ">=2.10.1"
pymongo = ">=4.12.0"
bcrypt = ">=4.3.0"
numpy = ">=2.2.4"
tensorflow = "*"
mediapipe = "*"
firebase-admin = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]
